// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginated List Pagination renders 1 item on page 7 with page size of 2 and 13 total items 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="2"
    prevtext="‹ Prev"
    totalitems="13"
    value="7"
  />
   
  <!---->
</div>
`;

exports[`Paginated List Pagination renders 3 items on page 2 with default page size of 10 and 13 total items 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: xyzzy
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: plugh
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="10"
    prevtext="‹ Prev"
    totalitems="13"
    value="2"
  />
   
  <!---->
</div>
`;

exports[`Paginated List Pagination renders 5 items on page 1 for a page size of 5, 13 total itmes and renders pagination 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style="display: none;"
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style="display: none;"
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
  </ul>
   
  <ul
    aria-label="Pagination"
    class="pagination gl-pagination d-flex justify-content-center prepend-top-default"
    role="navigation"
  >
    <li
      class="page-item disabled"
    >
      <span
        aria-disabled="true"
        aria-label="Go to previous page"
        class="page-link"
        href="#"
      >
        ‹ Prev
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to page 1"
        class="page-link  active btn-primary"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to page 2"
        class="page-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to page 3"
        class="page-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to next page"
        class="page-link"
        href="#"
      >
        Next ›
      </a>
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Paginated List Pagination renders 10 items for a default page size of 10, 13 total and renders pagination 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style="display: none;"
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style="display: none;"
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: corge
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: grault
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: garply
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: waldo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: fred
        </span>
      </div>
    </li>
  </ul>
   
  <ul
    aria-label="Pagination"
    class="pagination gl-pagination d-flex justify-content-center prepend-top-default"
    role="navigation"
  >
    <li
      class="page-item disabled"
    >
      <span
        aria-disabled="true"
        aria-label="Go to previous page"
        class="page-link"
        href="#"
      >
        ‹ Prev
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to page 1"
        class="page-link  active btn-primary"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to page 2"
        class="page-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        aria-label="Go to next page"
        class="page-link"
        href="#"
      >
        Next ›
      </a>
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Paginated List Pagination renders 13 items for a default page size of 20, 13 total items, and does not render pagination 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style="display: none;"
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style="display: none;"
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: corge
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: grault
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: garply
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: waldo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: fred
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: xyzzy
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: plugh
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Paginated List Search states renders the custom empty search message when there are no search results 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control pr-5"
        id="__BVID__42"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style=""
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style=""
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  />
   
  <!---->
   
  <div
    class="bs-callout bs-callout-warning mt-3 empty-message empty-search"
  >
    Custom empty message
  </div>
</div>
`;

exports[`Paginated List Search states renders the default empty search message when there are no search results 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control pr-5"
        id="__BVID__26"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style=""
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style=""
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  />
   
  <!---->
   
  <div
    class="bs-callout bs-callout-warning mt-3 empty-message empty-search"
  >
    Sorry, your filter produced no results.
  </div>
</div>
`;

exports[`Paginated List Search states renders the list flitered by search results 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <div
      class="position-relative ms-no-clear"
    >
      <input
        aria-label="Search"
        class="pl-5 form-control pr-5"
        id="__BVID__18"
        placeholder="Search"
        type="text"
      />
       
      <div
        class="pl-2 pr-2 position-left-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
      >
        <i
          aria-hidden="true"
          class="fa fa-search"
        />
      </div>
       
      <div
        class="pr-2 pl-2 position-right-0 position-absolute position-top-0 h-100 d-flex align-items-center text-muted"
        style=""
      >
        <span
          class="loading-container text-center"
          style="display: none;"
        >
          <span
            aria-hidden="true"
            aria-label="Loading"
            class="spinner"
          />
        </span>
         
        <i
          aria-hidden="true"
          class="fa fa-times fa-lg cursor-pointer"
          data-original-title="Clear"
          style=""
          title=""
        />
      </div>
    </div>
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
  </ul>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Paginated List Searchless states renders the list in an empty state with a custom empty message, when one is provided 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  />
   
  <!---->
   
  <div
    class="bs-callout bs-callout-warning mt-3 empty-message empty-message"
  >
    List is passed in empty
  </div>
</div>
`;

exports[`Paginated List Searchless states renders the list in an empty state, when no items are provided 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  />
   
  <!---->
   
  <div
    class="bs-callout bs-callout-warning mt-3 empty-message empty-message"
  >
    There are currently no items in this list.
  </div>
</div>
`;

exports[`Paginated List Searchless states renders the list with nested items, when an array of items is provided 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="10"
    prevtext="‹ Prev"
    totalitems="2"
    value="1"
  />
   
  <!---->
</div>
`;

exports[`Paginated List props filter filters on default "id" key 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="10"
    prevtext="‹ Prev"
    totalitems="1"
    value="1"
  />
   
  <!---->
</div>
`;

exports[`Paginated List props filter filters on provided "myKey" key 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: 
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="10"
    prevtext="‹ Prev"
    totalitems="1"
    value="1"
  />
   
  <!---->
</div>
`;

exports[`Paginated List props filter filters with provided filter function 1`] = `
<div>
  <div
    class="row-content-block second-block d-sm-flex justify-content-between flex-row-reverse"
  >
     
    <gl-search-box-by-type-stub
      value=""
    />
  </div>
    
  <ul
    class="list-group list-group-flush list-unstyled"
  >
    <li
      class="list-group-item"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
   
  <gl-pagination-stub
    align="left"
    class="d-flex justify-content-center prepend-top-default"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnextpage="Go to next page"
    labelpage="page => \`Go to page \${page}\`"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next ›"
    perpage="10"
    prevtext="‹ Prev"
    totalitems="1"
    value="1"
  />
   
  <!---->
</div>
`;
